                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 07-03-2006 fixed: Dialogs were rendered over the top of the screensaver.
 - 07-03-2006 changed: If visualisation is used as screensaver, a button press will disable it like with all other screensavers.
 - 07-03-2006 added: Get Thumbs and Resume button to album and video info dialogs (disabled until we get the code done).
 - 07-03-2006 fixed: dvdplayer could lockup if demuxer reported a too high framerate
 - 07-03-2006 fixed: dvdplayer could stall if it tried to sync audio clock while playing a format with small audioframes (2ch pcm, 2c ac3 + OTAS)
 - 07-03-2006 added: sync message to avoid stalling dvdplayer thread when trying to sync audio/video on discontinuities
 - 07-03-2006 changed: disabled sort order button for bookmarks in music nav
 - 07-03-2006 fixed: if the last focused control of a control group is disabled, no other control will get the focus
 - 07-03-2006 fixed: party mode table is missing when a new musicdatabase is created
 - 07-03-2006 fixed: some dvd menu's with still frames would have double overlays, one stuck one movable
 - 07-03-2006 fixed: ListItem.Directory etc. weren't working correctly.
 - 07-03-2006 changed: avoid closing audiocodec/renderer if stream's codec info didn't change over vts borders
 - 07-03-2006 changed: general stream discontinuity detection in dvdplayer (support for non dvd streams).
 - 07-03-2006 changed: Music Party Mode now uses a database table for its history, means another upgrade to version 1.6
 - 07-03-2006 changed: when Music Party Mode is enabled, all the extraneous playlist buttons in the Now Playing window are disabled